# monitui

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  pyproject.toml
doc/prompt/: features.md  goals.md
src/: app.rs  apply.rs  cli.rs  layout.rs  main.rs  monitor.rs  preset.rs
src/ui/: canvas_pane.rs  confirm.rs  external_change.rs  list_pane.rs  mod.rs  preset_menu.rs  status_bar.rs
