[package]
name = "monitui"
version = "0.2.0-1"
edition = "2021"
description = "A delightfully minimal TUI for wrangling Hyprland monitors"
license = "MIT"
repository = "https://github.com/nathanielbd/monitui"
homepage = "https://github.com/nathanielbd/monitui"
readme = "README.md"
keywords = ["hyprland", "tui", "monitor", "wayland", "display"]
categories = ["command-line-utilities", "config"]

[dependencies]
ratatui = { version = "0.27", features = ["all-widgets"] }
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
